# pico-rex

./: Cargo.toml  README.md
src/: game.rs  main.rs
src/sprites/: mod.rs  resources.rs
